# BubblesCrush

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bubbles-crush/: CMakeLists.txt
bubbles-crush/include/: Application.h  CollisionManager.h  ResourceManager.h  ResourceManager.inl  Resources.h  World.h
bubbles-crush/include/display/: Bubble.h  DisplayObject.h  Entity.h  Shape.h  ShapeBatch.h  Sprite.h  SpriteBatch.h
bubbles-crush/include/effects/: PostEffect.h
bubbles-crush/include/events/: EventDispatcher.h
bubbles-crush/include/particles/: ParticleSystems.h
bubbles-crush/include/physics/: CollisionManager.h  Physical.h
bubbles-crush/include/screen/: GameScreen.h  MenuScreen.h  ScreenManager.h
bubbles-crush/include/utils/: ResourceDirectory.h  SpritePool.h
bubbles-crush/media/Shaders/: Add.frag  DownSample.frag  Fullpass.vert  GuassianBlur.frag
bubbles-crush/src/: Application.cpp  CollisionManager.cpp  World.cpp  main.cpp
bubbles-crush/src/display/: Bubble.cpp  DisplayObject.cpp  Entity.cpp  Shape.cpp  Sprite.cpp
bubbles-crush/src/effects/: BloomEffect.cpp  PostEffect.cpp
bubbles-crush/src/events/: EventDispatcher.cpp
bubbles-crush/src/particles/: ParticleSystem.cpp
bubbles-crush/src/physics/: CollisionManager.cpp  Physical.cpp
bubbles-crush/src/screen/: GameScreen.cpp  MenuScreen.cpp  Screen.cpp  ScreenManager.cpp
bubbles-crush/src/utils/: ResourceDirectory.mm  Utils.cpp
bubbles-fall/: CMakeLists.txt
bubbles-fall/include/: Application.h  BubblesConfig.h  CollisionManager.h  Resources.h  World.h
bubbles-fall/include/display/: Bubble.h  Circle.h  DisplayObject.h  Entity.h
bubbles-fall/include/effects/: BloomEffect.h
bubbles-fall/include/particles/: ParticleSystem.h  ParticleSystems.h
bubbles-fall/include/screen/: Screen.h
bubbles-fall/include/utils/: CollisionUtils.h  SpritePool.h  Utils.h
bubbles-fall/media/Shaders/: DownSample.frag
bubbles-fall/src/: Application.cpp  CollisionManager.cpp  World.cpp  main.cpp
bubbles-fall/src/display/: Bubble.cpp  DisplayObject.cpp  Entity.cpp
bubbles-fall/src/events/: EventDispatcher.cpp
bubbles-fall/src/particles/: ParticleSystem.cpp  ParticleSystems.cpp
bubbles-fall/src/screen/: GameScreen.cpp  MenuScreen.cpp
bubbles-fall/src/utils/: CollisionUtils.cpp  Utils.cpp
bubbles-invaders/: CMakeLists.txt
bubbles-invaders/include/: Application.h  BubblesConfig.h  ParticleSystem.h  Physical.h  ResourceManager.h  Resources.h  World.h
bubbles-invaders/include/display/: Bubble.h  DisplayObject.h  Entity.h  Sprite.h  TextField.h
bubbles-invaders/include/effects/: BloomEffect.h
bubbles-invaders/include/particles/: ParticleSystem.h
bubbles-invaders/include/screen/: GameScreen.h  MenuScreen.h  Screen.h  ScreenManager.h
bubbles-invaders/include/utils/: CollisionUtils.h  Utils.h
bubbles-invaders/media/Shaders/: Add.frag  Brightness.frag  Fullpass.vert
bubbles-invaders/src/: Application.cpp  ParticleSystem.cpp  World.cpp
bubbles-invaders/src/display/: Bubble.cpp  DisplayObject.cpp  Entity.cpp  Sprite.cpp  TextField.cpp
bubbles-invaders/src/effects/: BloomEffect.cpp  PostEffect.cpp
bubbles-invaders/src/screen/: GameScreen.cpp  Screen.cpp  ScreenManager.cpp
bubbles-invaders/src/utils/: CollisionUtils.cpp  Utils.cpp
cmake/toolchains/: android.toolchain.cmake  i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
